# kampwng

./: .gitignore  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a  alkyl  alkyl-cli  cmake_install.cmake  lt  out.alir  v
business-architecture/: 01_business_analysis_planning_and_monitoring.md  02_elicitation_and_collaboration.md  03_requirement_life_cycle_management.md  04_strategy_analysis.md  05_requirement_analysis_and_design_definition.md  06_solution_evaluation.md
code/: testing0.aky
code/ai/: rpg.aky  test0.aky  test0_manual0.aky  test1.aky
code/alir/: extern.aky  test0.aky
code/manual/: simple_entities.aky  test0.aky  test1.aky  test2.aky  test_case.aky  test_class.aky  test_define.aky  test_for.aky  test_fun.aky  test_namespace.aky  test_operator.aky  test_overloading.aky  test_string.aky  test_type.aky
code/sema/: block.aky  pure.aky
code/test/: argv.aky  case.aky  class.aky  define.aky  file.aky  for.aky  fun.aky  fun_pointer.aky  immutable.aky  implicit_cast.aky  loop.aky  malloc.aky  namespace.aky  operator.aky  overloading.aky  shadow.aky  string.aky  string1.aky  then.aky  union.aky  while.aky
codes/: main.aky  main.kmpg
docs/business-architecture/: 01_business_analysis_planning_and_monitoring.md  02_elicitation_and_collaboration.md  03_requirement_life_cycle_management.md  04_strategy_analysis.md  06_solution_evaluation.md
docs/software-architecture/: 01_software_requirements.md  02_software_design.md  03_software_construction.md  04_software_testing.md  05_software_maintenance.md  06_software_configuration_management.md
docs/usage/: docs.md  switch.md
include/alick/: alick.h  alick_internal.h
include/alir/: alir.h  core.h  flux.h  generator.h  stmt.h  utils.h
include/alir/fragment/: addr.h  generate.h
include/driver/: cli.h  main.h
include/lexer/: lexer.h
include/llvm_codegen/: codegen.h  translate.h
include/llvm_codegen/fragment/: flux.h
include/parser/: parser.h  parser_internal.h  top.h  typestruct.h
include/semantic/: semantic.h  typestruct.h
include/semantic/fragment/: lookup.h  switch.h
lib/: c.hky  cmath.aky  std.hky
lib/c/: ctype.hky  math.hky  stdlib.hky  string.hky  time.hky
lib/llvm-c/: Analysis.hky  BitReader.hky  BitWriter.hky  Comdat.hky  Core.hky  DataTypes.hky  DebugInfo.hky  Deprecated.hky  Disassembler.hky  DisassemblerTypes.hky  Error.hky  ErrorHandling.hky  ExecutionEngine.hky  ExternC.hky  IRReader.hky  LLJIT.hky  LLJITUtils.hky  Linker.hky  Object.hky  Orc.hky  OrcEE.hky  Remarks.hky  Support.hky  Target.hky  TargetMachine.hky  Types.hky  Visibility.hky  blake3.hky  lto.hky
lib/llvm-c/Transforms/: PassBuilder.hky
lib/std/: alias.hky  file.hky  typedef.hky
misc/: prompt_helper.txt
misc/lisp/tree-sitter/: grammar.js  tree-sitter.json
misc/tree-sitter/: .gitignore  init.lua
src/: alkyl.c  alkyl.h  cli.c  cli.h  codegen.c  codegen.h  kampwng.c  kampwng.h  lexer.c  lexer.h  parser.c  parser.h
src/.old/: README.md
src/.old/codegen/: codegen.h  core.c  flow.c
src/.old/codegen/node/: access.c  cast.c  operator.c
src/.old/semantic/: check.c
src/alick/: cfg.c  core.c  memory.c  type.c
src/alir/: alir.h  const.c  core.c  emitter.c  flux.c  generator.c  lvalue.c  stmt.c  utils.c
src/alir/fragment/: addr.c  generate.c
src/codegen/: builtin.c  codegen.h  core.c  expr.c  flow.c  stmt.c  utils.c
src/codegen/node/: access.c  cast.c  operator.c
src/common/: arena.c  arena.h  compiler_debug.h  context.c  context.h  diagnostic.c  diagnostic.h
src/compiler_debug/: compiler_debug.h
src/diagnostic/: diagnostic.c  diagnostic.h
src/driver/: cli.c  cli.h  main.c  main.h
src/lexer/: emitter.c  emitter.h  lexer.c  lexer.h
src/llvm_codegen/: codegen.c  translate.c
src/llvm_codegen/fragment/: flux.c
src/old/codegen/: codegen.h  core.c  expr.c  flux.c  stmt.c
src/old/semantic/: scope.c  semantic.c  semantic.h  utils.c
src/parser/: core.c  emitter.c  expr.c  link.c  link.h  modif.c  modif.h  modifier.c  parser.c  parser.h  parser_internal.h  stmt.c  stmt.h  top.c  top.h
src/semantic/: check.c  core.c  emitter.c  semantic.c  semantic.h  table.c  type.c  utils.c
src/semantic/fragment/: lookup.c  switch.c
